--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,6 +2,9 @@
   transform-style: preserve-3d;
 }
 
+.backface-hidden {
+  backface-visibility: hidden;
+}
 
 .rotate-y-180 {
   transform: rotateY(180deg);
