--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,11 @@
 @tailwind utilities;
 
 .flip-card {
-    perspective: 1000px; /* Perspective for the 3D effect */
-    width: 400px; /* Card width */
-    height: 300px; /* Card height */
-    position: static;
-    margin: 20px; /* Margin to create space between cards */
+  perspective: 1000px; /* Perspective for the 3D effect */
+  width: 400px; /* Card width */
+  height: 300px; /* Card height */
+  margin: 20px; /* Adjust margin to create space between cards */
 }
-
 .flip-card-inner {
     width: 100%;
     height: 100%;
