--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.card-content {
-  padding: 1rem; /* Adjust as needed */
-}
 .flip-card {
   perspective: 1000px; /* Adds perspective to the card flipping */
 }
@@ -12,8 +9,7 @@
 .flip-card-inner {
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  position: relative;
-  background: white; /* Positioning context for the child elements */
+  position: relative; /* Positioning context for the child elements */
 }
 
 .flip-card:hover .flip-card-inner {
