--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 .flip-card-inner {
   transition: transform 0.6s;
-  
+  transform-style: preserve-3d;
   position: relative; /* Positioning context for the child elements */
 }
 
